--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light">California Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://duckduckgo.applytojob.com/apply/YIhWQzF8C8/Senior-Privacy-Engineer-Remote'>Senior Privacy Engineer (Remote) - DuckDuckGo - Career Page</a></h5> 
+<h5><a href='http://duckduckgo.applytojob.com/apply/YIhWQzF8C8/Senior-Privacy-Engineer-Remote'>Senior Privacy Engineer (Remote) - DuckDuckGo - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada Italy</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -134,7 +134,7 @@ experience?...</p>
 <p><span class="badge badge-light">Los Angeles, California Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
-<h5><a href='https://www.gobiglaw.com/jobs/19075669-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP, in Boston, Massachusetts | GoBiglaw.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.gobiglaw.com/jobs/19075669-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP, in Boston, Massachusetts | GoBiglaw.com</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
@@ -178,7 +178,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
+<h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -226,13 +226,13 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Alexandria-4800-Mark-Center-Dr/Privacy-and-Cybersecurity-Analyst_R0066225?source=DataPrivacyCareers.com'>Privacy and Cybersecurity Analyst</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Alexandria-4800-Mark-Center-Dr/Privacy-and-Cybersecurity-Analyst_R0066225?source=DataPrivacyCareers.com'>Privacy and Cybersecurity Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Privacy and Cybersecurity Analyst. Key Role: Serve as a Cybersecurity and 
 privacy analyst for a DoD client and implement data analysis tools that meet 
 privacy?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/oixOafwx'>Logitech Careers - Privacy Program Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/logitech/job/oixOafwx'>Logitech Careers - Privacy Program Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 18, 2019 ... The Logitech Privacy Team is hiring a Privacy Program Analyst for its European 
 Privacy Office based in Cork, Ireland. You would work directly with the European
@@ -248,7 +248,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Sr. Differential Privacy Research Engineer, Mozilla Corporation, Mountain View, 
 CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...</p>
@@ -261,7 +261,7 @@ CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/loandepot/job/oH4Jafwo'>loanDepot Careers - Privacy Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/loandepot/job/oH4Jafwo'>loanDepot Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-12</p>
 <hr/>
@@ -302,7 +302,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/51A347EF6E'>TechOp Solutions International - Jobs: Privacy Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/51A347EF6E'>TechOp Solutions International - Jobs: Privacy Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 19, 2019 ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
@@ -314,7 +314,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
+<h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
@@ -374,11 +374,11 @@ learning,?...</p>
 <p>2 days ago ... The Associate Privacy Analyst provides administrative and analytical support to 
 Prime's privacy program, working closely with privacy team members as well as?...</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8900'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8900'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-18</p>
 <hr/>
-<h5><a href='https://eygbl.referrals.selectminds.com/jobs/global-privacy-counsel-supervising-associate-80841'>Global Privacy Counsel Supervising Associate - EY Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/global-privacy-counsel-supervising-associate-80841'>Global Privacy Counsel Supervising Associate - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Apr 28, 2019 ... Blockchain Cryptographic Research Scientist (London/Paris). Global Services. 
 Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
